force-app/main/default/objects/cgcloud__KPI_Map__c/cgcloud__KPI_Map__c.object-meta.xml
<CustomObject>
    <description>This table contains the information about the KPI Map configuration</description>
    <label>KPI Map</label>
    <nameField>
        <label>KPI Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>