force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <description>KPI Map description.</description>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>