force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Name__c</fullName>
    <description>Defines the field which belongs to SObject Type and it is used for KPI Mapping.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>