force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Fund_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Fund Template. If fund template is not specified then it is a default mapping for all Fund records. If it is specified then the mapping is specific only to the related Fund records.</description>
    <label>Fund Template</label>
    <referenceTo>cgcloud__Fund_Template__c</referenceTo>
    <relationshipLabel>KPIs map</relationshipLabel>
    <relationshipName>KPIs_map</relationshipName>
    <type>Lookup</type>
</CustomField>