force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__KPI_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to KPI Definition to be used in the mapping.</description>
    <label>KPI Definition</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>KPI Maps</relationshipLabel>
    <relationshipName>KPI_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>