force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__KPI_Definition_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Definition_Code__c</fullName>
    <description>Measure code from KPI Definition lookup.</description>
    <label>KPI Definition Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>