force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Precision__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Precision__c</fullName>
    <description>Holds the total number of digits allowed for the target field.</description>
    <label>Precision</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>