force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Promotion Template. If promotion template is not specified then it is default mapping for all Promotion records. If it is specified then the mapping is specific only to the related Promotion records.</description>
    <label>Promotion Template</label>
    <referenceTo>cgcloud__Promotion_Template__c</referenceTo>
    <relationshipLabel>KPIs map</relationshipLabel>
    <relationshipName>KPIs_map</relationshipName>
    <type>Lookup</type>
</CustomField>