force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__RBF_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RBF_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to RBF Template. If RBF template is not specified, then it is default mapping for all Rate-Based Funding records. If it is specified then the mapping is specific only to the related Rate-Based Funding  records.</description>
    <label>RBF Template</label>
    <referenceTo>cgcloud__RBF_Template__c</referenceTo>
    <relationshipLabel>KPIs map</relationshipLabel>
    <relationshipName>KPIs_map</relationshipName>
    <type>Lookup</type>
</CustomField>