force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Scale__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scale__c</fullName>
    <description>Holds the number of decimal places allowed for the target field.</description>
    <label>Scale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>