force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__SObject_Type__c</fullName>
    <description>Defines type of SF object supported for KPI Mapping.</description>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>