force-app/main/default/objects/cgcloud__KPI_Map__c/fields/cgcloud__Tactic_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tactic_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Tactic Template. If tactic template is not specified then it is a default mapping for all the tactic records. If it is specified then the mapping is specific only to the related Tactic records.</description>
    <label>Tactic Template</label>
    <referenceTo>cgcloud__Tactic_Template__c</referenceTo>
    <relationshipLabel>KPIs map</relationshipLabel>
    <relationshipName>KPIs_map</relationshipName>
    <type>Lookup</type>
</CustomField>