force-app/main/default/objects/cgcloud__KPI_Map__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__SObject_Type__c</columns>
    <columns>cgcloud__Field_Name__c</columns>
    <columns>cgcloud__KPI_Definition__c</columns>
    <columns>cgcloud__KPI_Definition_Code__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>